<resources>
    <string name="app_name">DriveDrop</string>
    <string name="login_no_account">Kein Account? Jetzt registrieren</string>
    <string name="login_password">Passwort</string>
    <string name="password">Passwort</string>
    <string name="login">Login</string>
    <string name="alles_anzeigen">Alles anzeigen</string>
    <string name="or_continue_with_social_login">Oder mit Social Login einloggen:</string>
    <string name="registrieren">Registrieren</string>
    <string name="loggen_sie_sich_in_ihr_account_ein">Loggen Sie sich in Ihr Account ein</string>
    <string name="benutzername_oder_email">Benutzername oder Email</string>
    <string name="account_erstellen">Account erstellen</string>
    <string name="by_clicking_continue_you_agree_to_our_terms_of_service_and_privacy_policy">By clicking continue, you agree to our Terms of Service and Privacy Policy</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
</resources>