<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_background"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="150dp"
            android:src="@drawable/drive_drop_logo">
        </ImageView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/loggen_sie_sich_in_ihr_account_ein"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:hint="@string/benutzername_oder_email"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:padding="18dp"
            android:inputType="text"
            android:id="@+id/username_input"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/login_password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:padding="18dp"
            android:inputType="textPassword"
            android:id="@+id/password_input"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:id="@+id/login_btn"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/or_continue_with_social_login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/google_btn"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:importantForAccessibility="no"
                android:src="@drawable/google_icon" />

            <ImageView
                android:id="@+id/facebook_btn"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:importantForAccessibility="no"
                android:src="@drawable/facebook_icon" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_margin="5dp"
            android:text="@string/login_no_account"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="187dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#6A6C77"
                android:text="@string/registrieren"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>